--- a/src/index.css
+++ b/src/index.css
@@ -20,14 +20,25 @@
   align-items: center;
 }
 
-.site-user {
+.site-user-btn {
+  font-size: 1.5em;
   border: 1px dotted black;
   border-radius: 10px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
   padding: 8px;
   margin: 8px;
-  cursor: pointer;
   width: 75%;
+  
+  text-decoration: none;
+  color: black;
+
+  transition-duration: 150ms;
+  transition-timing-function: ease;
+}
+
+.site-user-btn:hover {
+  font-size: 2em;
+  margin: 4px;
 }
 
 #side-bar {
@@ -37,4 +48,30 @@
   background-color: pink;
   width: 25vw;
   height: 100vh;
+  border-right: 2px dotted black;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav-btn {
+  font-size: 1.5em;
+  border: 1px dotted black;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  padding: 8px;
+  margin: 8px;
+  width: 50%;
+
+  text-decoration: none;
+  color: black;
+}
+
+p {
+  text-align: left;
+  font-size: 1.4rem;
+  margin: 5px;
+  padding: 10px;
+  text-align: center;
 }
