--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,21 @@
   margin: 4px;
 }
 
+.site-user-header {
+  font-size: 3em;
+  border: 1px dotted black;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  padding: 8px;
+  margin: 8px;
+  width: 75%;
+}
+
+.small-details {
+  text-align: left;
+  font-size: 1.1rem;
+}
+
 #side-bar {
   position: fixed;
   top: 0;
@@ -53,6 +68,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#copy {
+  position: absolute;
+  bottom: 1.5rem;
 }
 
 .nav-btn {
@@ -74,4 +94,17 @@ p {
   margin: 5px;
   padding: 10px;
   text-align: center;
+}
+
+a {
+  color: black;
+}
+
+ul {
+  text-align: left;
+  font-size: 1.2rem;
+}
+
+.read-me {
+  width: 75%;
 }
