--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,7 @@
   border: 1px dotted black;
   border-radius: 10px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  background-color: lightpink;
   padding: 8px;
   margin: 8px;
   width: 50%;
@@ -107,4 +108,12 @@ ul {
 
 .read-me {
   width: 75%;
+}
+
+hr {
+  margin: 10px;
+}
+
+::selection {
+  background-color: pink;
 }
